[gd_scene load_steps=11 format=3 uid="uid://dnsw5xuoh1jem"]

[ext_resource type="Script" path="res://Scenes/Ruins/Tank01/ruin_tank_01.gd" id="1_s2ows"]
[ext_resource type="Texture2D" uid="uid://j2uxy5b10r4p" path="res://Assets/rubble/tanks/X2_Tank_03.webp" id="2_ie6yb"]
[ext_resource type="Texture2D" uid="uid://d3kqo8pb3r063" path="res://Assets/rubble/tanks/X2_Tank_04_just_cover.webp" id="3_y6v1g"]
[ext_resource type="Texture2D" uid="uid://cwhtj3g58ogf" path="res://Assets/rubble/tanks/X2_Tank_04_just_cover_02.webp" id="4_l6aau"]
[ext_resource type="Texture2D" uid="uid://bnuminah0wb7t" path="res://Assets/rubble/tanks/X2_Tank_04_just_mushrooms_with_color_cleanup_1.webp" id="5_3h0x1"]
[ext_resource type="Texture2D" uid="uid://b4bdbe3k74065" path="res://Assets/rubble/tanks/X2_Tank_04_just_mushrooms_with_color_cleanup_2.webp" id="6_vag0d"]
[ext_resource type="Texture2D" uid="uid://cu2leeig1w3gp" path="res://Assets/rubble/tanks/X2_Tank_04_just_mushrooms_with_color_cleanup_3.webp" id="7_x1bkl"]
[ext_resource type="Texture2D" uid="uid://ccuu6oyl4kn34" path="res://Assets/rubble/tanks/X2_Tank_04_just_mushrooms_with_color_cleanup_4.webp" id="8_4u83y"]
[ext_resource type="Texture2D" uid="uid://dx5sk41xeaws4" path="res://Assets/rubble/tanks/X2_Tank_04_just_mushrooms_with_color_cleanup_5.webp" id="9_6yd38"]
[ext_resource type="Texture2D" uid="uid://cqvuxg16tr3dj" path="res://Assets/rubble/tanks/X2_Tank_04_just_mushrooms_with_color_cleanup_6.webp" id="10_054gc"]

[node name="RuinTank01" type="Node2D"]
script = ExtResource("1_s2ows")

[node name="Render01512x256" type="Sprite2D" parent="."]
texture = ExtResource("2_ie6yb")

[node name="Tank02Covered01" type="Sprite2D" parent="."]
texture = ExtResource("3_y6v1g")

[node name="X2Tank04JustCoverBottomBlend" type="Sprite2D" parent="."]
texture = ExtResource("4_l6aau")

[node name="AnimatedMushrooms" type="Node2D" parent="."]

[node name="X2Tank04JustMushroomsWithColorCleanup1" type="Sprite2D" parent="AnimatedMushrooms"]
visible = false
use_parent_material = true
texture = ExtResource("5_3h0x1")

[node name="X2Tank04JustMushroomsWithColorCleanup2" type="Sprite2D" parent="AnimatedMushrooms"]
use_parent_material = true
texture = ExtResource("6_vag0d")

[node name="X2Tank04JustMushroomsWithColorCleanup3" type="Sprite2D" parent="AnimatedMushrooms"]
visible = false
use_parent_material = true
texture = ExtResource("7_x1bkl")

[node name="X2Tank04JustMushroomsWithColorCleanup4" type="Sprite2D" parent="AnimatedMushrooms"]
use_parent_material = true
texture = ExtResource("8_4u83y")

[node name="X2Tank04JustMushroomsWithColorCleanup5" type="Sprite2D" parent="AnimatedMushrooms"]
visible = false
use_parent_material = true
texture = ExtResource("9_6yd38")

[node name="X2Tank04JustMushroomsWithColorCleanup6" type="Sprite2D" parent="AnimatedMushrooms"]
use_parent_material = true
texture = ExtResource("10_054gc")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
